--- a/public/style.css
+++ b/public/style.css
@@ -16,42 +16,76 @@ section{
     background-size: cover;
 }
 .form-box{
-    position: relative;
-    width: 400px;
-    height: 450px;
+    /* position: relative; */
+    width: 550px;
+    height: 600px;
     background: transparent;
     border: 2px solid rgba(255,255,255,0.5);
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
     backdrop-filter: blur(15px);
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 
 }
+
+.form-value {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.header > p {
+    color: #fff;
+    text-align: center;
+}
+
+.interaction {
+    margin-top: 25px;
+    height: 412px;
+    font-style: italic;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.me {
+    text-align: left;
+    margin: 0 7px;
+}
+
+.me > span {
+    background: #fff;
+    padding: 7px;
+    border-radius: 7px;
+}
+
+.you {
+    text-align: right;
+    margin: 0 7px;
+}
+
+.you > span {
+    background: #fff;
+    padding: 7px;
+    border-radius: 7px;
+}
+
 h2{
     font-size: 2em;
     color: #fff;
     text-align: center;
 }
+
+.message {
+    display: flex;
+}
+
 .inputbox{
-    position: relative;
-    margin: 30px 0;
+    /* position: relative; */
+    /* margin: 30px 0; */
     width: 310px;
     border-bottom: 2px solid #fff;
-}
-.inputbox label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    color: #fff;
-    font-size: 1em;
-    pointer-events: none;
-    transition: .5s;
-}
-input:focus ~ label,
-input:valid ~ label{
-top: -5px;
+    flex: 3;
 }
 .inputbox input {
     width: 100%;
@@ -63,54 +97,22 @@ top: -5px;
     padding:0 35px 0 5px;
     color: #fff;
 }
-.inputbox ion-icon{
-    position: absolute;
-    right: 8px;
-    color: #fff;
-    font-size: 1.2em;
-    top: 20px;
-}
-.forget{
-    margin: -15px 0 15px ;
-    font-size: .9em;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;  
+
+::placeholder {
+    color: #cac7c7;
 }
 
-.forget label input{
-    margin-right: 3px;
-    
-}
-.forget label a{
-    color: #fff;
-    text-decoration: none;
-}
-.forget label a:hover{
-    text-decoration: underline;
-}
 button{
-    width: 100%;
+    width: 15%;
     height: 40px;
-    border-radius: 40px;
+    border-radius: 10px;
     background: #fff;
     border: none;
     outline: none;
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
+    flex: 1;
+    margin-top: 20px;
 }
-.register{
-    font-size: .9em;
-    color: #fff;
-    text-align: center;
-    margin: 25px 0 10px;
-}
-.register p a{
-    text-decoration: none;
-    color: #fff;
-    font-weight: 600;
-}
-.register p a:hover{
-    text-decoration: underline;
-}
+  
