--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,7 @@ section{
 
 .me {
     text-align: left;
-    margin: 0 7px;
+    margin: 18px 7px;
 }
 
 .me > span {
@@ -61,7 +61,7 @@ section{
 
 .you {
     text-align: right;
-    margin: 0 7px;
+    margin: 18px 7px;
 }
 
 .you > span {
